Integrated Rewards Feature

--- a/lost-and-found/templates/base_layout.html
+++ b/lost-and-found/templates/base_layout.html
@@ -43,6 +43,15 @@
                         </p>
                     </a>
                 </li>
+                {% if request.user.is_authenticated %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'rewards' %}">
+                        <p class='btn m-0 index'>
+                            My Rewards
+                        </p>
+                    </a>
+                </li>
+                {% endif %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle my-circle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <img src="{{ request.user.userprofile.avatar.url }}" class="rounded-circle" style="width: 40px; height: 40px;">
