Frontend for post details, post cards

--- a/lost-and-found/accounts/templates/my_posts.html
+++ b/lost-and-found/accounts/templates/my_posts.html
@@ -177,7 +177,7 @@
                                     {% endif %}
                                 </p>
                             </div>
-                            <div class="card-footer">
+                            <!-- <div class="card-footer">
                                 <small class="text-muted">
                                     <b>Contact Number: </b> <span id='contact1'> {{ post.contact1 }} </span>
                                     <br>
@@ -185,7 +185,7 @@
                                     <br>
                                     <b>By: </b> {% if post.user %} {{ post.user.username }} {% else %} Guest User {% endif %}
                                 </small>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                 </div>
