--- a/lost-and-found/posts/templates/create.html
+++ b/lost-and-found/posts/templates/create.html
@@ -97,7 +97,7 @@
                                     <span class="badge badge-pill badge-success" id='type'>Found Lost Item</span>
                                 </p>
                             </div>
-                            <div class="card-footer">
+                            <!-- <div class="card-footer">
                                 <small class="text-muted">
                                     <b>Contact Number: </b> <span id='contact1'>xxx-xxx-xxxx</span>
                                     <br>
@@ -105,7 +105,7 @@
                                     <br>
                                     <b>By: </b> {% if request.user.is_authenticated %} {{ request.user }} {% else %} Guest User {% endif %}
                                 </small>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
