--- a/lost-and-found/posts/templates/edit_post.html
+++ b/lost-and-found/posts/templates/edit_post.html
@@ -112,7 +112,7 @@
 
                                     </p>
                                 </div>
-                                <div class="card-footer">
+                                <!-- <div class="card-footer">
                                     <small class="text-muted">
                                         <b>Contact Number : </b> <span id='contact1'> {{ post.contact1 }} </span>
                                         <br>
@@ -120,7 +120,7 @@
                                         <br>
                                         <b>By : </b> {% if post.user %} {{ post.user.username }} {% else %} Guest User {% endif %}
                                     </small>
-                                </div>
+                                </div> -->
                             </div>
 
                             <div id='close_alert' class="alert alert-danger mt-3" role="alert" style="display: none;">
