--- a/lost-and-found/posts/templates/index.html
+++ b/lost-and-found/posts/templates/index.html
@@ -144,9 +144,8 @@
                 <div class="col-4">
                     <label for="">Item Type</label>
                     <select class='form-control' id='assetType'>
-                        {% comment %} {% for asset in assetType %}
-                            <option value="{{ asset.id }}">{{ asset }}</option>
-                        {% endfor %} {% endcomment %}
+                        <option value="-1" selected>All Item Types</option>
+                        <!-- Options will be dynamically populated by JavaScript -->
                     </select>
                 </div>
                 <div class='col-4'>
@@ -164,6 +163,15 @@
                         <option value="1">Open</option>
                         <option value="0">Closed</option>
                     </select>
+                </div>
+            </div>
+            
+            <!-- Add Filter Button -->
+            <div class="form-row mb-5">
+                <div class="col-12 text-center">
+                    <button class="btn btn-primary" id="filterButton">
+                        <i class="fas fa-filter"></i> Filter
+                    </button>
                 </div>
             </div>
             <div class="row" id='all_post'>
