--- a/lost-and-found/accounts/templates/profile.html
+++ b/lost-and-found/accounts/templates/profile.html
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                         <div class="col mb-4 rotate-img">
-                            <div class="card shadow h-100 py-2" style="border-left:.25rem solid #5cb85c !important">
+                            <div class="card shadow h-100 py-2" style="border-left:.25rem solid black !important">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
@@ -42,14 +42,17 @@
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-check-circle fa-2x"></i>
+                                            <i class="fas fa-archive fa-2x"></i>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                    </div>
+                    <div class="row">
                         <div class="col mb-4 rotate-img">
-                            <div class="card shadow h-100 py-2" style="border-left:.25rem solid #d9534f !important">
+                            <div class="card shadow h-100 py-2" style="border-left:.25rem solid black !important">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
@@ -59,27 +62,68 @@
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-times-circle fa-2x"></i>
+                                            <i class="fas fa-archive fa-2x"></i>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row mt-4">
-                        {% if posts|length == 0 %}
-                            <div class='col-lg-12 jumbotron text-center border border-dark mt-5'>
-                                <img src="{% static 'images/post.png' %}" width='15%' class='mb-5'>
-                                <h4>No Posts</h4>
-                            </div>
-                        {% else %}
-                            <div class="col-12 text-center">
-                                <h4 class='font-weight-bold'> Types of Owned Posts </h4>
-                                <div class='col-lg-12 jumbotron text-center border border-dark mt-4'>
-                                    <canvas id='Chart'></canvas>
+                        <div class="col mb-4 rotate-img">
+                            <div class="card shadow h-100 py-2" style="border-left:.25rem solid black !important">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="font-weight-bold text-uppercase mb-1">Lost Item Posts</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                                {{ losts|length }}
+                                            </div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-archive fa-2x"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        {% endif %}
+                        </div> 
+                    </div>
+                    <div class="row">
+                        <div class="col mb-4 rotate-img">
+                            <div class="card shadow h-100 py-2" style="border-left:.25rem solid black !important">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="font-weight-bold text-uppercase mb-1">Found Item Posts</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                                {{ founds|length }}
+                                            </div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-archive fa-2x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4 rotate-img">
+                            <div class="card shadow h-100 py-2" style="border-left:.25rem solid black !important">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="font-weight-bold text-uppercase mb-1">Reward Points</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                                {{ rewards.points }}
+                                            </div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-archive fa-2x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="row ml-1">
+                        <H5 style="font-weight:bold;">YOUR BADGES</H5>
                     </div>
                 </div>
             </div>
@@ -100,7 +144,7 @@
                             <p>Email: <span id='email'> {{ user.email }} </span></p>
                         </p>
                     </div>
-                    <div class="container mb-3 ml-1">
+                    <div class="container mb-2 ml-1">
                         <p class="card-text">
                             <span class="badge badge-pill badge-success" id='faculty'> {{ user.userprofile.faculty }}
                             </span>
