Updated profile page

--- a/lost-and-found/accounts/templates/signup.html
+++ b/lost-and-found/accounts/templates/signup.html
@@ -65,7 +65,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    <b id='username'>Username</b>
+                                    <b id='username'>Roll Number</b>
                                 </h5>
                                 <p class="card-text">
                                     <p>
