--- a/lost-and-found/accounts/templates/login.html
+++ b/lost-and-found/accounts/templates/login.html
@@ -21,7 +21,7 @@
                 <form method="POST" action="{% url 'login' %}" class='mt-3'>
                     {% csrf_token %}
                     <div class="form-group">
-                        <label> Username </label>
+                        <label> Roll Number </label>
                         <input type="text" name="username" class='form-control' required>
                     </div>
                     <div class="form-group">
