Modified edit profile page

--- a/lost-and-found/accounts/templates/signup.html
+++ b/lost-and-found/accounts/templates/signup.html
@@ -141,7 +141,7 @@
     /* Bind: username */
     $("#id_username").on('input', function () {
         var text = $("#id_username").val();
-        $("#username").html(text);
+        $("#rollnumber").html(text);
     });
 
     /* Bind: first_name */
