Filter button added

--- a/lost-and-found/posts/templates/index.html
+++ b/lost-and-found/posts/templates/index.html
@@ -211,6 +211,13 @@
                 </div>
 
             </div>
+            <div class="form-row mb-5">
+                <div class="col-12 text-center">
+                    <button class="btn btn-primary" id="filterButton">
+                        <i class="fas fa-filter"></i> Filter
+                    </button>
+                </div>
+            </div>
 
         <div class="swiper mySwiper">
             <div class="swiper-wrapper" id='all_post'>
