--- a/lost-and-found/posts/templates/index.html
+++ b/lost-and-found/posts/templates/index.html
@@ -184,9 +184,9 @@
 
                     <select class='form-control' id="type">
 
-                        <option value="-1" selected>All</option>
+                        <!-- <option value="-1" selected>All</option>
 
-                        <option value="found">Found Item</option>
+                        <option value="found">Found Item</option> -->
 
                         <option value="lost">Looking for Item</option>
 
